<resources>
    <string name="app_name">DucenPredictor</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_name">Miles Tone</string>
    <string name="sample_id">ID: 100010</string>
    <string name="sample_age">Age: 36</string>
    <string name="sample_gender">Gender: Male</string>
    <string name="todo">TODO</string>
    <string name="string_patient_name">James Gaveau</string>
    <string name="string_information">Information</string>
    <string name="string_first_name">First Name:</string>
    <string name="string_last_name">Last Name:</string>
    <string name="string_age">Age:</string>
    <string name="string_gender">Gender:</string>
    <string name="string_birth_date">Birth date:</string>
    <string name="string_phone">Phone:</string>
    <string name="string_address">Address:</string>
    <string name="string_email">Email:</string>
    <string name="string_settings">Settings</string>
    <string name="string_account">Account</string>
    <string name="string_change_password">Change Password</string>
    <string name="string_other">Other</string>
    <string name="string_logout">Log out</string>
    <string name="string_change_pin">Change Pin</string>
    <string name="string_scan">Scan</string>
    <string name="string_home">Home</string>
    <string name="string_scan_patient">Scanner is waiting for trigger pass...</string>
    <string name="string_appointment">Reason of Appointment: initial-examination-new-patient</string>
    <string name="string_date_appointment">Date of Appointment: 2020-01-01</string>

    <string-array name="options">
        <item>Bar Code Scanner</item>
        <item>OMR/OCR</item>
        <item>Speech-to-text</item>
    </string-array>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">logout</string>

    <!--Pincode String-->
    <string name="number_4">4</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="set_pin">Set your 4 - digit PIN</string>
    <string name="confirm_pin">Confirm your 4 - digit PIN</string>
    <string name="enter_pin">ENTER PIN</string>
    <string name="number_0">0</string>
    <string name="button_back">back</string>
    <string name="email_verify_title">Enter your Information to verify your Identity</string>
    <string name="practitioner_id">Practitioner ID</string>
    <string name="verify">VERIFY</string>
    <string name="create_password">Create password to secure your email</string>
    <string name="promt_confirm">Confirm Password</string>
    <string name="next">NEXT</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="button_reset">Reset App Data?</string>
    <string name="button_forgot">Forgot your PIN?</string>
    <string name="reset">You will delete saved data. Are you sure you want to reset application data?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="get_started">GET STARTED</string>
    <string name="string_test">TEST</string>
    <string name="barcode_status">BARCODE STATUS</string>
    <string name="barcode_data">BARCODE DATA</string>
    <string name="condition">Condition</string>
</resources>
