<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_patientPhoto"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_male_user"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_patientFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/sample_name"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_patientId"
                android:layout_width="match_parent"
                android:gravity="center|start"
                android:layout_height="wrap_content"
                android:text="@string/sample_id"
                android:textSize="16sp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_bDay"
            android:gravity="center|start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_birth_date"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/tv_gender"
            android:gravity="center|start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_gender"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:text="@string/string_appointment"
            android:textSize="16sp"
            android:id="@+id/tv_desc"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:id="@+id/tv_app_date"
            android:textSize="16sp"
            android:text="@string/string_date_appointment"/>
    </LinearLayout>
    <ImageButton
        android:id="@+id/ib_viewPatient"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:src="@drawable/ic_arrow_right"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription" />
</LinearLayout>
