<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:scaleType="centerCrop"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dm_90"
            android:layout_marginLeft="@dimen/dm_50"
            android:layout_marginTop="@dimen/dm_70"
            android:layout_marginRight="@dimen/dm_50"
            android:layout_marginBottom="@dimen/dm_40"
            android:background="@drawable/new_analance_logo_450w" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dm_30"
            android:gravity="center|top"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"

                android:background="@drawable/btn_white"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingLeft="@dimen/dm_20"
                android:paddingRight="@dimen/dm_10"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/dm_20"
                android:layout_marginEnd="24dp"
                android:background="@drawable/btn_white"
                android:drawableRight="@drawable/ic_eye"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dm_20"
                android:paddingRight="@dimen/dm_10"
                android:selectAllOnFocus="true" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <Button
                android:id="@+id/login"
                android:layout_width="@dimen/buttons_width"
                android:layout_height="@dimen/buttons_height"
                android:layout_marginTop="@dimen/dm_50"
                android:layout_marginBottom="@dimen/dm_20"
                android:background="@drawable/btn_white"
                android:enabled="false"
                android:fontFamily="@font/roboto_black"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/fontColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@android:drawable/ic_popup_sync"
                android:drawablePadding="@dimen/dm_10"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/button_reset"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>