<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/img_btn_nav_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_menu_white"
                tools:ignore="ContentDescription,UnusedAttribute" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_patientFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sample_name"
            android:textColor="@android:color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tv_patientId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sample_id"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_male_user"
            app:civ_border_color="@color/colorWhite"
            app:civ_border_width="3dp" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center|start"
        android:text="@string/string_information"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center|start"
                        android:text="@string/string_first_name"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_patientFirstName"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:gravity="center|end"
                        android:text="@string/string_test"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorLightGray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center|start"
                        android:text="@string/string_last_name"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_patientLastName"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:gravity="center|end"
                        android:text="@string/string_test"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorLightGray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center|start"
                        android:text="@string/string_age"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/tv_PatientAge"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:gravity="center|end"
                        android:text="@string/string_test"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorLightGray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center|start"
                        android:text="@string/string_gender"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/tv_PatientGender"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:gravity="center|end"
                        android:text="@string/string_test"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorLightGray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center|start"
                        android:text="@string/string_birth_date"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/tv_PatientBirthDate"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:gravity="center|end"
                        android:text="@string/string_test"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorLightGray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center|start"
                        android:text="@string/string_phone"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/tv_PatientPhone"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:gravity="center|end"
                        android:text="@string/string_test"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorLightGray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center|start"
                        android:text="@string/string_address"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/tv_PatientAddress"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:gravity="center|end"
                        android:text="@string/string_test"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorLightGray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center|start"
                        android:text="@string/string_email"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/tv_PatientEmail"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:gravity="center|end"
                        android:text="@string/string_test"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>


</LinearLayout>