<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:scaleType="centerCrop"
    android:src="@drawable/login_background"
    tools:context=".view.EmailVerificationActivity">

    <LinearLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm_65"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/header_back"
            android:layout_width="@dimen/dm_130"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/backgroundColor"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <TextView
            android:id="@+id/stepHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:paddingRight="@dimen/dm_50"
            android:text="Step 2 / 4"
            android:textColor="@color/fontColorBlue"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/intro_icons_height"
            android:layout_height="@dimen/intro_icons_width"
            android:layout_marginTop="@dimen/dm_10"
            android:background="@drawable/icon_identify_information" />

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dm_30"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/email_verify_title"
                android:textColor="@color/fontColor"
                android:textSize="30sp"
                android:textStyle="bold"
                app:lineHeight="@dimen/dm_40" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/practitioner_id"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"

                android:background="@drawable/btn_white"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/practitioner_id"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/dm_20"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/dm_20"
                android:layout_marginEnd="24dp"

                android:background="@drawable/btn_white"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/prompt_email"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingLeft="@dimen/dm_20"
                android:selectAllOnFocus="true" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_verify"
                android:layout_width="@dimen/buttons_width"
                android:layout_height="@dimen/buttons_height"
                android:layout_marginTop="@dimen/dm_30"
                android:layout_marginBottom="@dimen/dm_10"
                android:background="@drawable/btn_light_blue"
                android:enabled="false"
                android:fontFamily="@font/roboto_black"
                android:shadowColor="@color/colorPrimaryDark"
                android:text="@string/verify"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>